--- a/Examples/Sample/Podfile
+++ b/Examples/Sample/Podfile
@@ -1,3 +1,4 @@
 platform :ios, '7.0'
 
+pod 'MWPhotoBrowser', :git => 'https://github.com/iorikingdom/MWPhotoBrowser.git'
 pod 'DZNPhotoPickerController', :path => '../../'
